Improve how we configure things & publish logs for tentacle tests

--- a/vagrantfile
+++ b/vagrantfile
@@ -275,65 +275,58 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
   if ENV['OctopusDSCTestMode'] != 'ServerOnly' then
 
     config.vm.provision "shell", path: "Tests/configure-octopus-for-tentacle-tests.ps1"
+    publish_logs(config, 'Tentacle_Setup', ['C:/Octopus/Logs/configure-octopus-for-tentacle-tests.txt'])
 
     # initial tentacle install
     run_tentacle_scenario(config,
       'Tentacle_Scenario_01_Install',
-      ['C:/Octopus/Logs/configure-octopus-for-tentacle-tests.txt',
-       'C:/Octopus/Logs/OctopusServer.txt',
+      ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
        'C:/Octopus/OctopusServer-OctopusServer.config'])
-    config.vm.provision "shell", inline: "& c:\\temp\\Tests\\register-polling-tentacle.ps1; exit $LASTEXITCODE"
-    config.vm.provision "shell", inline: "& c:\\temp\\Tests\\trigger-and-wait-for-healthcheck.ps1; exit $LASTEXITCODE"
+    config.vm.provision "shell", path: "Tests/register-polling-tentacle.ps1"
+    publish_logs(config, 'Tentacle_Scenario_01_Install', ['C:/Octopus/Logs/register-polling-tentacle.txt'])
+    config.vm.provision "shell", path: "Tests/trigger-and-wait-for-healthcheck.ps1"
+    publish_logs(config, 'Tentacle_Scenario_01_Install', ['C:/Octopus/Logs/trigger-and-wait-for-healthcheck.txt'])
     config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_01_install')
 
     # uninstall tentacle
     run_tentacle_scenario(config,
       'Tentacle_Scenario_02_Remove',
-      ['C:/Octopus/Logs/configure-octopus-for-tentacle-tests.txt',
-       'C:/Octopus/Logs/OctopusServer.txt',
-       'C:/Octopus/Logs-register-polling-tentacle.txt',
-       'C:/Octopus/Logs/trigger-and-wait-for-healthcheck.txt',
+      ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
        'C:/Octopus/OctopusServer-OctopusServer.config'])
-    config.vm.provision "shell", inline: "& c:\\temp\\Tests\\trigger-and-wait-for-healthcheck.ps1; exit $LASTEXITCODE"
+    config.vm.provision "shell", path: "Tests/trigger-and-wait-for-healthcheck.ps1"
+    publish_logs(config, 'Tentacle_Scenario_02_Remove', ['C:/Octopus/Logs/trigger-and-wait-for-healthcheck.txt'])
     config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_02_remove')
 
     # Install old version
     run_tentacle_scenario(config,
       'Tentacle_Scenario_03_Reinstall',
-      ['C:/Octopus/Logs/configure-octopus-for-tentacle-tests.txt',
-       'C:/Octopus/Logs/OctopusServer.txt',
-       'C:/Octopus/Logs-register-polling-tentacle.txt',
-       'C:/Octopus/Logs/trigger-and-wait-for-healthcheck.txt',
+      ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
        'C:/Octopus/OctopusServer-OctopusServer.config',
        'C:/Octopus/OctopusTentacleHome/Logs/OctopusTentacle.txt',
        'C:/Octopus/OctopusTentacleHome/Tentacle/Tentacle.config'])
-    config.vm.provision "shell", inline: "& c:\\temp\\Tests\\trigger-and-wait-for-healthcheck.ps1; exit $LASTEXITCODE"
+    config.vm.provision "shell", path: "Tests/trigger-and-wait-for-healthcheck.ps1"
+    publish_logs(config, 'Tentacle_Scenario_03_Reinstall', ['C:/Octopus/Logs/trigger-and-wait-for-healthcheck.txt'])
     config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_03_reinstall')
 
     # Upgrade it
     run_tentacle_scenario(config,
       'Tentacle_Scenario_04_Upgrade',
-      ['C:/Octopus/Logs/configure-octopus-for-tentacle-tests.txt',
-       'C:/Octopus/Logs/OctopusServer.txt',
-       'C:/Octopus/Logs-register-polling-tentacle.txt',
-       'C:/Octopus/Logs/trigger-and-wait-for-healthcheck.txt',
+      ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
        'C:/Octopus/OctopusServer-OctopusServer.config',
        'C:/Octopus/OctopusTentacleHome/Logs/OctopusTentacle.txt',
        'C:/Octopus/OctopusTentacleHome/Tentacle/Tentacle.config'])
-    config.vm.provision "shell", inline: "& c:\\temp\\Tests\\trigger-and-wait-for-healthcheck.ps1; exit $LASTEXITCODE"
+    config.vm.provision "shell", path: "Tests/trigger-and-wait-for-healthcheck.ps1"
+    publish_logs(config, 'Tentacle_Scenario_04_Upgrade', ['C:/Octopus/Logs/trigger-and-wait-for-healthcheck.txt'])
     config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_04_upgrade')
 
     # install watchdog
     run_tentacle_scenario(config,
       'Tentacle_Scenario_05_Watchdog_Create',
-      ['C:/Octopus/Logs/configure-octopus-for-tentacle-tests.txt',
-       'C:/Octopus/Logs/OctopusServer.txt',
-       'C:/Octopus/Logs-register-polling-tentacle.txt',
-       'C:/Octopus/Logs/trigger-and-wait-for-healthcheck.txt',
+      ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
        'C:/Octopus/OctopusServer-OctopusServer.config',
        'C:/Octopus/OctopusTentacleHome/Logs/OctopusTentacle.txt',
@@ -343,10 +336,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
     # delete watchdog
     run_tentacle_scenario(config,
       'Tentacle_Scenario_06_Watchdog_Delete',
-      ['C:/Octopus/Logs/configure-octopus-for-tentacle-tests.txt',
-       'C:/Octopus/Logs/OctopusServer.txt',
-       'C:/Octopus/Logs-register-polling-tentacle.txt',
-       'C:/Octopus/Logs/trigger-and-wait-for-healthcheck.txt',
+      ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
        'C:/Octopus/OctopusServer-OctopusServer.config',
        'C:/Octopus/OctopusTentacleHome/Logs/OctopusTentacle.txt',
@@ -356,10 +346,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
     # remove in preparation for testing comms port
     run_tentacle_scenario(config,
       'Tentacle_Scenario_07_Remove',
-      ['C:/Octopus/Logs/configure-octopus-for-tentacle-tests.txt',
-       'C:/Octopus/Logs/OctopusServer.txt',
-       'C:/Octopus/Logs-register-polling-tentacle.txt',
-       'C:/Octopus/Logs/trigger-and-wait-for-healthcheck.txt',
+      ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
        'C:/Octopus/OctopusServer-OctopusServer.config',
        'C:/Octopus/OctopusTentacleHome/Logs/OctopusTentacle.txt',
@@ -369,10 +356,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
     # tentacle comms port
     run_tentacle_scenario(config,
       'Tentacle_Scenario_08_Tentacle_Comms_Port',
-      ['C:/Octopus/Logs/configure-octopus-for-tentacle-tests.txt',
-       'C:/Octopus/Logs/OctopusServer.txt',
-       'C:/Octopus/Logs-register-polling-tentacle.txt',
-       'C:/Octopus/Logs/trigger-and-wait-for-healthcheck.txt',
+      ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
        'C:/Octopus/OctopusServer-OctopusServer.config',
        'C:/Octopus/OctopusTentacleHome/Logs/OctopusTentacle.txt',
