--- a/vagrantfile
+++ b/vagrantfile
@@ -50,7 +50,7 @@ def publish_logs(config, scenario, log_files)
   end
 end
 
-def run_octopus_scenario(config, scenario, log_files)
+def run_scenario(config, scenario, log_files)
   config.vm.provision "shell", inline: "write-output \"##teamcity[blockOpened name='Running Scenario #{scenario}']\""
   config.vm.provision "dsc" do |dsc|
     dsc.configuration_file  = "#{scenario}.ps1"
@@ -67,19 +67,6 @@ def run_octopus_scenario(config, scenario, log_files)
     winrm.destination = "PesterTestResults_#{scenario}.xml"
     config.vm.provision "shell", inline: "write-output \"##teamcity[publishArtifacts 'PesterTestResults_#{scenario}.xml']\""
   end
-end
-
-def run_tentacle_scenario(config, scenario, log_files)
-  config.vm.provision "shell", inline: "write-output \"##teamcity[blockOpened name='Running Scenario #{scenario}']\""
-  config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "#{scenario}.ps1"
-    dsc.configuration_data_file  = "E2ETests/Scenarios/Configuration.psd1"
-    dsc.manifests_path = "E2ETests/Scenarios/"
-    dsc.abort_on_dsc_failure = true
-  end
-  config.vm.provision "shell", inline: "write-output \"##teamcity[blockClosed name='Running Scenario #{scenario}']\""
-  config.vm.provision "shell", path: "Tests/surface-logs.ps1"
-  publish_logs(config, scenario, log_files)
 end
 
 Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
@@ -188,13 +175,13 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
 
   if ENV['OctopusDSCTestMode'] != "TentacleOnly" then
     # Run DSC to install server
-    run_octopus_scenario(config,
+    run_scenario(config,
       'Server_Scenario_01_Install',
       ['C:/ChezOctopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-OctopusServer.config'])
 
     # Run DSC to install second HA node
-    run_octopus_scenario(config,
+    run_scenario(config,
       'Server_Scenario_02_Install_Second_Node',
       ['C:/ChezOctopus/Logs/OctopusServer.txt',
        'C:/ChezOctopusSecondNode/Logs/OctopusServer.txt',
@@ -202,69 +189,69 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
        'C:/Octopus/OctopusServer-OctopusServer.config'])
 
     # remove the first node
-    run_octopus_scenario(config,
+    run_scenario(config,
       'Server_Scenario_03_Remove',
       ['C:/ChezOctopusSecondNode/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-HANode.config'])
 
     # remove the second ode
-    run_octopus_scenario(config, 'Server_Scenario_04_Remove_Second_Node', [])
+    run_scenario(config, 'Server_Scenario_04_Remove_Second_Node', [])
 
     # Run DSC to install server with a custom instance name
-    run_octopus_scenario(config, 'Server_Scenario_05_Install_Custom_Instance',
+    run_scenario(config, 'Server_Scenario_05_Install_Custom_Instance',
       ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-MyOctopusServer.config'])
 
     # remove the server with a custom instance name
-    run_octopus_scenario(config, 'Server_Scenario_06_Remove_Custom_Instance', [])
+    run_scenario(config, 'Server_Scenario_06_Remove_Custom_Instance', [])
 
     # re-install old version
-    run_octopus_scenario(config,
+    run_scenario(config,
       'Server_Scenario_07_Reinstall',
       ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-OctopusServer.config'])
 
     # upgrade to the latest
-    run_octopus_scenario(config,
+    run_scenario(config,
       'Server_Scenario_08_Upgrade',
       ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-OctopusServer.config'])
 
     # install watchdog
-    run_octopus_scenario(config,
+    run_scenario(config,
       'Server_Scenario_09_Watchdog_Create',
       ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-OctopusServer.config'])
 
     # delete watchdog
-    run_octopus_scenario(config,
+    run_scenario(config,
       'Server_Scenario_10_Watchdog_Delete',
       ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-OctopusServer.config'])
 
     # remove again prior to installing 4
-    run_octopus_scenario(config, 'Server_Scenario_11_Remove',
+    run_scenario(config, 'Server_Scenario_11_Remove',
       ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-OctopusServer.config'])
 
     # install v4
-    run_octopus_scenario(config, 'Server_Scenario_12_Built_In_Worker',
+    run_scenario(config, 'Server_Scenario_12_Built_In_Worker',
       ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-OctopusServer.config'])
 
     # remove again prior to testing "install only"
-    run_octopus_scenario(config, 'Server_Scenario_13_Remove',
+    run_scenario(config, 'Server_Scenario_13_Remove',
       ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-OctopusServer.config'])
 
   end
   # install only without configure
-  run_octopus_scenario(config, 'Server_Scenario_14_Install_Without_Configure',
+  run_scenario(config, 'Server_Scenario_14_Install_Without_Configure',
       ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-OctopusServer.config'])
 
   # go from installed to configured
-  run_octopus_scenario(config, 'Server_Scenario_15_Configure_Preinstalled_Instance',
+  run_scenario(config, 'Server_Scenario_15_Configure_Preinstalled_Instance',
       ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-OctopusServer.config'])
 
@@ -274,7 +261,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
     publish_logs(config, 'Tentacle_Setup', ['C:/Octopus/Logs/configure-octopus-for-tentacle-tests.txt'])
 
     # initial tentacle install
-    run_tentacle_scenario(config,
+    run_scenario(config,
       'Tentacle_Scenario_01_Install',
       ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
@@ -286,7 +273,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
     config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_01_install')
 
     # uninstall tentacle
-    run_tentacle_scenario(config,
+    run_scenario(config,
       'Tentacle_Scenario_02_Remove',
       ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
@@ -296,7 +283,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
     config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_02_remove')
 
     # Install old version
-    run_tentacle_scenario(config,
+    run_scenario(config,
       'Tentacle_Scenario_03_Reinstall',
       ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
@@ -308,7 +295,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
     config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_03_reinstall')
 
     # Upgrade it
-    run_tentacle_scenario(config,
+    run_scenario(config,
       'Tentacle_Scenario_04_Upgrade',
       ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
@@ -320,7 +307,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
     config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_04_upgrade')
 
     # install watchdog
-    run_tentacle_scenario(config,
+    run_scenario(config,
       'Tentacle_Scenario_05_Watchdog_Create',
       ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
@@ -330,7 +317,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
     config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_05_watchdog_create')
 
     # delete watchdog
-    run_tentacle_scenario(config,
+    run_scenario(config,
       'Tentacle_Scenario_06_Watchdog_Delete',
       ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
@@ -340,7 +327,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
     config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_06_watchdog_delete')
 
     # remove in preparation for testing comms port
-    run_tentacle_scenario(config,
+    run_scenario(config,
       'Tentacle_Scenario_07_Remove',
       ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
@@ -350,7 +337,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
     config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_07_remove')
 
     # tentacle comms port
-    run_tentacle_scenario(config,
+    run_scenario(config,
       'Tentacle_Scenario_08_Tentacle_Comms_Port',
       ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
