--- a/vagrantfile
+++ b/vagrantfile
@@ -27,10 +27,15 @@ $run_test_scenario_script = <<SCRIPT
   write-output "##teamcity[blockOpened name='Testing Scenario {scenario_name}']"
   $env:TEAMCITY_PROJECT_NAME="#{ENV['TEAMCITY_PROJECT_NAME']}"
   set-location c:/temp/tests
-  write-host "executing bundle.bat _1.16.1_ exec rspec Spec/{scenario_name}_spec.rb --format documentation"
-  C:/tools/ruby25/bin/bundle.bat _1.16.1_ exec rspec Spec/{scenario_name}_spec.rb --format documentation
+  Import-Module Pester
+  $configuration = [PesterConfiguration]::Default
+  $configuration.TestResult.Enabled = $true
+  $configuration.TestResult.OutputPath = 'PesterTestResults_{scenario_name}.xml'
+  $configuration.TestResult.OutputFormat = 'NUnitXml'
+  $configuration.Run.Path = @('Spec/{scenario_name}.Tests.ps1')
+  $configuration.Output.Verbosity = 'Detailed'
+  Invoke-Pester -configuration $configuration
   write-output "##teamcity[blockClosed name='Testing Scenario {scenario_name}']"
-  exit $LASTEXITCODE
 SCRIPT
 
 def publish_logs(config, scenario, log_files)
@@ -45,6 +50,15 @@ def publish_logs(config, scenario, log_files)
   end
 end
 
+def run_tests(config, scenario)
+  config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', scenario)
+  config.vm.provision "winrm-file-download" do |winrm|
+    winrm.source = "c:/temp/tests/PesterTestResults_#{scenario}.xml"
+    winrm.destination = "PesterTestResults_#{scenario}.xml"
+    config.vm.provision "shell", inline: "write-output \"##teamcity[publishArtifacts 'PesterTestResults_#{scenario}.xml']\""
+  end
+end
+
 def run_octopus_scenario(config, scenario, log_files)
   config.vm.provision "shell", inline: "write-output \"##teamcity[blockOpened name='Running Scenario #{scenario}']\""
   config.vm.provision "dsc" do |dsc|
@@ -56,7 +70,7 @@ def run_octopus_scenario(config, scenario, log_files)
   config.vm.provision "shell", inline: "write-output \"##teamcity[blockClosed name='Running Scenario #{scenario}']\""
   config.vm.provision "shell", path: "Tests/surface-logs.ps1"
   publish_logs(config, scenario, log_files)
-  config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', scenario.downcase)
+  run_tests(config, scenario)
 end
 
 def run_tentacle_scenario(config, scenario, log_files)
@@ -99,6 +113,8 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
     override.vm.network :forwarded_port, guest: 80,   host: 8000, id: "web"
     override.vm.network :forwarded_port, guest: 443, host: 8443,  id: "ssl"
     override.vm.network :forwarded_port, guest: 22, host: 9222,  id: "ssh"
+    override.winrm.port = 5986
+    override.winrm.ssl_peer_verification = false
   end
 
   if Vagrant::Util::Platform.windows? then
@@ -261,108 +277,92 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
   if ENV['OctopusDSCTestMode'] != 'ServerOnly' then
 
     config.vm.provision "shell", path: "Tests/configure-octopus-for-tentacle-tests.ps1"
+    publish_logs(config, 'Tentacle_Setup', ['C:/Octopus/Logs/configure-octopus-for-tentacle-tests.txt'])
 
     # initial tentacle install
     run_tentacle_scenario(config,
       'Tentacle_Scenario_01_Install',
-      ['C:/Octopus/Logs/configure-octopus-for-tentacle-tests.txt',
-       'C:/Octopus/Logs/OctopusServer.txt',
+      ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
        'C:/Octopus/OctopusServer-OctopusServer.config'])
     config.vm.provision "shell", path: "Tests/register-polling-tentacle.ps1"
+    publish_logs(config, 'Tentacle_Scenario_01_Install', ['C:/Octopus/Logs/register-polling-tentacle.txt'])
     config.vm.provision "shell", path: "Tests/trigger-and-wait-for-healthcheck.ps1"
-    config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_01_install')
+    publish_logs(config, 'Tentacle_Scenario_01_Install', ['C:/Octopus/Logs/trigger-and-wait-for-healthcheck.txt'])
+    run_tests(config, 'tentacle_scenario_01_install')
 
     # uninstall tentacle
     run_tentacle_scenario(config,
       'Tentacle_Scenario_02_Remove',
-      ['C:/Octopus/Logs/configure-octopus-for-tentacle-tests.txt',
-       'C:/Octopus/Logs/OctopusServer.txt',
-       'C:/Octopus/Logs-register-polling-tentacle.txt',
-       'C:/Octopus/Logs/trigger-and-wait-for-healthcheck.txt',
+      ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
        'C:/Octopus/OctopusServer-OctopusServer.config'])
     config.vm.provision "shell", path: "Tests/trigger-and-wait-for-healthcheck.ps1"
-    config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_02_remove')
+    publish_logs(config, 'Tentacle_Scenario_02_Remove', ['C:/Octopus/Logs/trigger-and-wait-for-healthcheck.txt'])
+    run_tests(config, 'tentacle_scenario_02_remove')
 
     # Install old version
     run_tentacle_scenario(config,
       'Tentacle_Scenario_03_Reinstall',
-      ['C:/Octopus/Logs/configure-octopus-for-tentacle-tests.txt',
-       'C:/Octopus/Logs/OctopusServer.txt',
-       'C:/Octopus/Logs-register-polling-tentacle.txt',
-       'C:/Octopus/Logs/trigger-and-wait-for-healthcheck.txt',
+      ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
        'C:/Octopus/OctopusServer-OctopusServer.config',
        'C:/Octopus/OctopusTentacleHome/Logs/OctopusTentacle.txt',
        'C:/Octopus/OctopusTentacleHome/Tentacle/Tentacle.config'])
     config.vm.provision "shell", path: "Tests/trigger-and-wait-for-healthcheck.ps1"
-    config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_03_reinstall')
+    publish_logs(config, 'Tentacle_Scenario_03_Reinstall', ['C:/Octopus/Logs/trigger-and-wait-for-healthcheck.txt'])
+    run_tests(config, 'tentacle_scenario_03_reinstall')
 
     # Upgrade it
     run_tentacle_scenario(config,
       'Tentacle_Scenario_04_Upgrade',
-      ['C:/Octopus/Logs/configure-octopus-for-tentacle-tests.txt',
-       'C:/Octopus/Logs/OctopusServer.txt',
-       'C:/Octopus/Logs-register-polling-tentacle.txt',
-       'C:/Octopus/Logs/trigger-and-wait-for-healthcheck.txt',
+      ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
        'C:/Octopus/OctopusServer-OctopusServer.config',
        'C:/Octopus/OctopusTentacleHome/Logs/OctopusTentacle.txt',
        'C:/Octopus/OctopusTentacleHome/Tentacle/Tentacle.config'])
     config.vm.provision "shell", path: "Tests/trigger-and-wait-for-healthcheck.ps1"
-    config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_04_upgrade')
+    publish_logs(config, 'Tentacle_Scenario_04_Upgrade', ['C:/Octopus/Logs/trigger-and-wait-for-healthcheck.txt'])
+    run_tests(config, 'tentacle_scenario_04_upgrade')
 
     # install watchdog
     run_tentacle_scenario(config,
       'Tentacle_Scenario_05_Watchdog_Create',
-      ['C:/Octopus/Logs/configure-octopus-for-tentacle-tests.txt',
-       'C:/Octopus/Logs/OctopusServer.txt',
-       'C:/Octopus/Logs-register-polling-tentacle.txt',
-       'C:/Octopus/Logs/trigger-and-wait-for-healthcheck.txt',
+      ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
        'C:/Octopus/OctopusServer-OctopusServer.config',
        'C:/Octopus/OctopusTentacleHome/Logs/OctopusTentacle.txt',
        'C:/Octopus/OctopusTentacleHome/Tentacle/Tentacle.config'])
-    config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_05_watchdog_create')
+    run_tests(config, 'tentacle_scenario_05_watchdog_create')
 
     # delete watchdog
     run_tentacle_scenario(config,
       'Tentacle_Scenario_06_Watchdog_Delete',
-      ['C:/Octopus/Logs/configure-octopus-for-tentacle-tests.txt',
-       'C:/Octopus/Logs/OctopusServer.txt',
-       'C:/Octopus/Logs-register-polling-tentacle.txt',
-       'C:/Octopus/Logs/trigger-and-wait-for-healthcheck.txt',
+      ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
        'C:/Octopus/OctopusServer-OctopusServer.config',
        'C:/Octopus/OctopusTentacleHome/Logs/OctopusTentacle.txt',
        'C:/Octopus/OctopusTentacleHome/Tentacle/Tentacle.config'])
-    config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_06_watchdog_delete')
+    run_tests(config, 'tentacle_scenario_06_watchdog_delete')
 
     # remove in preparation for testing comms port
     run_tentacle_scenario(config,
       'Tentacle_Scenario_07_Remove',
-      ['C:/Octopus/Logs/configure-octopus-for-tentacle-tests.txt',
-       'C:/Octopus/Logs/OctopusServer.txt',
-       'C:/Octopus/Logs-register-polling-tentacle.txt',
-       'C:/Octopus/Logs/trigger-and-wait-for-healthcheck.txt',
+      ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
        'C:/Octopus/OctopusServer-OctopusServer.config',
        'C:/Octopus/OctopusTentacleHome/Logs/OctopusTentacle.txt',
        'C:/Octopus/OctopusTentacleHome/Tentacle/Tentacle.config'])
-    config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_07_remove')
+    run_tests(config, 'tentacle_scenario_07_remove')
 
     # tentacle comms port
     run_tentacle_scenario(config,
       'Tentacle_Scenario_08_Tentacle_Comms_Port',
-      ['C:/Octopus/Logs/configure-octopus-for-tentacle-tests.txt',
-       'C:/Octopus/Logs/OctopusServer.txt',
-       'C:/Octopus/Logs-register-polling-tentacle.txt',
-       'C:/Octopus/Logs/trigger-and-wait-for-healthcheck.txt',
+      ['C:/Octopus/Logs/OctopusServer.txt',
        'C:/Octopus/OctopusServer-ConfigurePreInstalledInstance.config',
        'C:/Octopus/OctopusServer-OctopusServer.config',
        'C:/Octopus/OctopusTentacleHome/Logs/OctopusTentacle.txt',
        'C:/Octopus/OctopusTentacleHome/Tentacle/Tentacle.config'])
-    config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_08_tentacle_comms_port')
+    run_tests(config, 'tentacle_scenario_08_tentacle_comms_port')
   end
 end
